Декомпозировать openapi.yaml - декомпозировано моменты связанные с AdminUserController - схемы тоже в разных файлах - убрано ResponseEntity в методах AdminUserController
