# src/main/java/kg/musabaev/em_bank_rest/controller/AdminUserController.java
@@ -7,9 +7,9 @@ import kg.musabaev.em_bank_rest.dto.PatchUserRequest;
 import kg.musabaev.em_bank_rest.repository.specification.UserSpecification;
 import kg.musabaev.em_bank_rest.service.UserService;
 import lombok.RequiredArgsConstructor;
-import org.springdoc.core.annotations.ParameterObject;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.web.PagedModel;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
@@ -22,26 +22,26 @@ public class AdminUserController {
     private final UserService userService;
 
     @GetMapping
-    public ResponseEntity<PagedModel<GetCreatePatchUserResponse>> getAllUser(
+    public PagedModel<GetCreatePatchUserResponse> getAllUser(
             @ModelAttribute UserSpecification filters, Pageable pageable) {
-        return ResponseEntity.ok(userService.getAll(filters, pageable));
+        return userService.getAll(filters, pageable);
     }
 
     @GetMapping("/{userId}")
-    public ResponseEntity<GetCreatePatchUserResponse> getUserById(@Positive @PathVariable Long userId) {
-        return ResponseEntity.ok(userService.getById(userId));
+    public GetCreatePatchUserResponse getUserById(@Positive @PathVariable Long userId) {
+        return userService.getById(userId);
     }
 
     @DeleteMapping("/{userId}")
-    public ResponseEntity<?> deleteUser(@Positive @PathVariable Long userId) {
+    @ResponseStatus(HttpStatus.NO_CONTENT)
+    public void deleteUser(@Positive @PathVariable Long userId) {
         userService.delete(userId);
-        return ResponseEntity.noContent().build();
     }
 
     @PatchMapping("/{userId}")
-    public ResponseEntity<GetCreatePatchUserResponse> updateUser(
+    public GetCreatePatchUserResponse updateUser(
             @Positive @PathVariable Long userId,
             @Valid @RequestBody PatchUserRequest dto) {
-        return ResponseEntity.ok(userService.patch(userId, dto));
+        return userService.patch(userId, dto);
     }
 }
