# src/main/resources/static/openapi.yaml
@@ -437,152 +437,6 @@ paths:
             'application/json':
               schema:
                 $ref: "#/components/schemas/GetCreatePatchUserResponse"
-  /api/v1/admin/users/{userId}:
-    get:
-      tags:
-        - admin-user-controller
-      operationId: getUserById_1
-      parameters:
-        - name: userId
-          in: path
-          required: true
-          schema:
-            type: integer
-            format: int64
-            exclusiveMinimum: 0
-      responses:
-        "404":
-          description: User not found
-        "400":
-          description: Invalid userId
-        "401":
-          description: Unauthorized
-        "200":
-          description: OK
-          content:
-            'application/json':
-              schema:
-                $ref: "#/components/schemas/GetCreatePatchUserResponse"
-    delete:
-      tags:
-        - admin-user-controller
-      operationId: deleteUser
-      parameters:
-        - name: userId
-          in: path
-          required: true
-          schema:
-            type: integer
-            format: int64
-            exclusiveMinimum: 0
-      responses:
-        "404":
-          description: User not found
-        "400":
-          description: Invalid userId
-        "401":
-          description: Unauthorized
-        "200":
-          description: OK
-    patch:
-      tags:
-        - admin-user-controller
-      operationId: updateUser_1
-      parameters:
-        - name: userId
-          in: path
-          required: true
-          schema:
-            type: integer
-            format: int64
-            exclusiveMinimum: 0
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/PatchUserRequest"
-        required: true
-      responses:
-        "400":
-          description: Invalid fields
-        "404":
-          description: User not found
-        "409":
-          description: User with given email already exists
-        "401":
-          description: Unauthorized
-        "200":
-          description: OK
-          content:
-            'application/json':
-              schema:
-                $ref: "#/components/schemas/GetCreatePatchUserResponse"
-  /api/v1/admin/users:
-    get:
-      tags:
-        - admin-user-controller
-      operationId: getAllUser
-      parameters:
-        - name: email
-          in: query
-          required: false
-          schema:
-            type: string
-        - name: fullName
-          in: query
-          required: false
-          schema:
-            type: string
-        - name: id
-          in: query
-          required: false
-          schema:
-            type: integer
-            format: int64
-        - name: role
-          in: query
-          required: false
-          schema:
-            type: string
-            enum:
-              - USER
-              - ADMIN
-        - name: page
-          in: query
-          description: Zero-based page index (0..N)
-          required: false
-          schema:
-            type: integer
-            default: 0
-            minimum: 0
-        - name: size
-          in: query
-          description: The size of the page to be returned
-          required: false
-          schema:
-            type: integer
-            default: 20
-            minimum: 1
-        - name: sort
-          in: query
-          description: "Sorting criteria in the format: property,(asc|desc). Default\
-                \ sort order is ascending. Multiple sort criteria are supported."
-          required: false
-          schema:
-            type: array
-            items:
-              type: string
-      responses:
-        "400":
-          description: Invalid query params
-        "401":
-          description: Unauthorized
-        "200":
-          description: OK
-          content:
-            'application/json':
-              schema:
-                $ref: "#/components/schemas/PagedModelGetCreatePatchUserResponse"
   /api/v1/admin/cards/{cardId}:
     get:
       tags:
